// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jurisdiction Detail tests Jurisdiction details network error screen 1`] = `
<View>
  <Text
    style={
      Object {
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    Error: 
    Network error!
  </Text>
</View>
`;

exports[`Jurisdiction Detail tests Legislature details graphql error screen 1`] = `
<View>
  <Text
    style={
      Object {
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    Error: 
    GraphQL Error!
  </Text>
</View>
`;

exports[`Jurisdiction Detail tests jurisdiction loading and success screen 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 20,
      }
    }
  >
    Loading
  </Text>
</View>
`;

exports[`Jurisdiction Detail tests jurisdiction loading and success screen 2`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Text
    style={
      Object {
        "fontSize": 24,
        "textAlign": "center",
      }
    }
  >
    Alaska
    : Current Session
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 2,
        "padding": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      Currently not in session
    </Text>
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      Start Date: 
      NA
    </Text>
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      End Date: 
      NA
    </Text>
  </View>
  <View
    style={
      Object {
        "height": "70%",
        "justifyContent": "space-around",
        "padding": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "33%",
          "width": "100%",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#dae8eb",
            "borderBottomWidth": 2,
            "borderColor": "#9ca7b8",
            "borderLeftWidth": 1,
            "borderRadius": 5,
            "borderRightWidth": 1,
            "borderTopWidth": 2,
            "height": "90%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "90%",
          }
        }
        testID="customButton"
      >
        <Text
          style={
            Object {
              "fontSize": 24,
              "textAlign": "center",
            }
          }
        >
          Members
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "33%",
          "width": "100%",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#dae8eb",
            "borderBottomWidth": 2,
            "borderColor": "#9ca7b8",
            "borderLeftWidth": 1,
            "borderRadius": 5,
            "borderRightWidth": 1,
            "borderTopWidth": 2,
            "height": "90%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "90%",
          }
        }
        testID="customButton"
      >
        <Text
          style={
            Object {
              "fontSize": 24,
              "textAlign": "center",
            }
          }
        >
          Committees
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "33%",
          "width": "100%",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#dae8eb",
            "borderBottomWidth": 2,
            "borderColor": "#9ca7b8",
            "borderLeftWidth": 1,
            "borderRadius": 5,
            "borderRightWidth": 1,
            "borderTopWidth": 2,
            "height": "90%",
            "justifyContent": "center",
            "opacity": 1,
            "width": "90%",
          }
        }
        testID="customButton"
      >
        <Text
          style={
            Object {
              "fontSize": 24,
              "textAlign": "center",
            }
          }
        >
          District Maps
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
